<resources>
    <string name="app_name">CreditoMBO</string>

    <string name="hello_world">Hello world!</string>

    <string name="titulo">Gestión del credito</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="title_activity_list">ListActivity</string>

    <string name="action_settings">Configuración</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="action_discard">Descartar</string>

    <string name="nuevo_credito">Nuevo Credito</string>
    <string name="buscar">Buscar</string>
    <string name="ingrese_nombre">Ingrese Nombre</string>

    <string name="nombre">Nombre</string>
    <string name="cedula">Cedula</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
    <string name="celular">Celular</string>
    <string name="otro">Otro telefono</string>
    <string name="empresa">Empresa</string>
    <string name="valor">$ Valor Prestamo</string>
    <string name="cuotas"># Cuotas</string>
    <string name="interes">% Interes</string>
    <string name="guardar">Guardar</string>

    <string name="dialogo_si">SI</string>
    <string name="dialogo_no">NO</string>
    <string name="dialogo_guardar_msg">¿Esta seguro de guardar estos datos?</string>
    <string name="dialogo_cancelar_msg">¿Seguro quiere salir sin guardar?</string>

</resources>
