<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:hint="@string/nombre"
        android:ems="10"
        android:id="@+id/nombre" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="10"
        android:id="@+id/cedula"
        android:hint="@string/cedula" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:maxLength="50"
        android:id="@+id/direccion"
        android:hint="@string/direccion" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:maxLength="10"
        android:id="@+id/telefono"
        android:hint="@string/telefono" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:maxLength="10"
        android:id="@+id/celular"
        android:hint="@string/celular" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:maxLength="10"
        android:id="@+id/otro"
        android:hint="@string/otro" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="50"
        android:id="@+id/empresa"
        android:hint="@string/empresa" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="8"
        android:id="@+id/valor"
        android:hint="@string/valor"
        android:layout_marginRight="150dp"
        android:layout_marginEnd="150dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/cuotas"
        android:hint="@string/cuotas"
        android:layout_marginRight="150dp"
        android:layout_marginEnd="150dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/interes"
        android:hint="@string/interes"
        android:layout_marginRight="150dp"
        android:layout_marginEnd="150dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:drawableLeft="@drawable/guardar"
        android:drawableStart="@drawable/guardar"
        android:drawablePadding="8dp"
        android:text="@string/guardar"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:id="@+id/guardar"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
